--- a/page5.html
+++ b/page5.html
@@ -388,7 +388,7 @@
             <img class="img-fit" src="source/img/어우러기 사진/KakaoTalk_20210720_170132505_10.jpg" alt="92">
         </div>
         <div class="col-4">
-            <img class="img-fit" src="source/img/어우러기 사진/KakaoTalk_20210720_170132505_11.jpgG" alt="93">
+            <img class="img-fit" src="source/img/어우러기 사진/KakaoTalk_20210720_170132505_11.jpg" alt="93">
         </div>
     </section>
     <section class="row">
