--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
                 부회장_최소영
             </p>
             <br>
+            <a href="https://everytime.kr/418804/v/206327458" target="_blank" style="text-decoration-line: none;">
             <p id="hover" class="text-SongMyung text-align-left text-size-20pt text-color-white"; font-size=3.8rem >
                 모집글
-            </p>
+            </p></a>
             <a href="https://www.youtube.com/channel/UCHOrvV_EtfmfGQSdJfPOjLg" target="_blank" style="text-decoration-line: none;">
             <p id="hover" class="text-SongMyung text-align-left text-size-20pt text-color-white"; font-size=3.8rem >
                 유튜브
