--- a/page2.html
+++ b/page2.html
@@ -123,9 +123,10 @@
             <div id="gird-margin"></div>
         </div>
         <div class="col-4">
+            <a href="https://everytime.kr/418804/v/206327458" target="_blank" style="text-decoration-line: none;">
             <p id="hover" class="text-SongMyung text-color-pink text-size-24pt text-align-left">
                 모집글 링크
-            </p>
+            </p></a>
         </div>
         <div class="col-6">
             <div id="gird-margin"></div>
